Fixed canvas being too large for browser screen

--- a/style.css
+++ b/style.css
@@ -18,6 +18,12 @@
 }
 
 body {
-    background-color: grey;
+    background-color: beige;
+    margin: 0;
+    padding: 0;
 }
 
+div, canvas {
+    margin: 0;
+    padding: 0;
+}
